# eda-storyteller

./: .env.example  Makefile  README.md  docker-compose.yaml
apply/: Dockerfile  pyproject.toml
apply/app/: main.py
gateway/: Dockerfile  pyproject.toml
gateway/app/: main.py
gateway/app/routes/: datasets.py
insights/: Dockerfile  pyproject.toml
insights/app/: main.py  rules.py
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: celery_client.py  main.py
shared/: __init__.py  pyproject.toml
shared/shared/: __init__.py  config.py
shared/shared/schemas/: __init__.py  actions.py  profile.py
shared/shared/storage/: s3_client.py
shared/shared/tools/: export_jsonschema.py
shared/tests/: test_contracts.py
shared/tests/examples/: actions_valid.json  profile_invalid.json  profile_valid.json
worker/: Dockerfile  pyproject.toml
worker/worker/: celery_app.py  tasks.py
