[project]
name = "eda-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "psycopg2-binary",
    "sqlalchemy>=2",
    "boto3",
    "eda-shared @ file:///app/shared", # local editable install in Dockerfile
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"