[project]
name = "eda-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "celery[redis]",
    "pydantic>=2",
    "eda-shared @ file:///app/shared",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"