## Shared package


### `shared/pyproject.toml`

[project]
name = "eda-shared"
version = "0.1.1"
description = "Shared schemas and utilities for EDA Storyteller"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "boto3",
    "pytest"
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"